--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,7 +14,7 @@ jobs:
       
       - run: npm ci
 
-      - run: npm run build
+      - run: CI=false npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
